--- a/README
+++ b/README
@@ -110,7 +110,11 @@ to the file name).
 ********************************************************************************
 Authors:
 
-Anton Belov (anton.belov@ucd.ie) -- MUSer2.
+Anton Belov (anton@belov-mcdowell.com) -- MUSer2.
 Joao Marques-Silva (joao.marques-silva@ucd.ie) -- BOLT, initial version of MUSer.
 
-Please contact Anton Belov (anton.belov@ucd.ie) in case of bugs or questions.
+Contributors:
+
+Alessandro Previti
+
+Please contact Anton Belov (anton@belov-mcdowell.com) in case of bugs or questions.
